# real_estate_pms

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
apps/accounts/: admin.py  apps.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/bookings/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
apps/bookings/management/commands/: mark_overdue.py  seed_data.py
apps/bookings/migrations/: 0001_initial.py  0002_booking_unique_active_booking_per_plot.py
apps/customers/: admin.py  models.py  urls.py  views.py
apps/customers/migrations/: 0001_initial.py
apps/dashboard/: urls.py  views.py
apps/dashboard/templatetags/: pms_filters.py
apps/expenses/: admin.py  context_processors.py  models.py  urls.py
apps/expenses/migrations/: 0001_initial.py
apps/projects_and_plots/: admin.py  apps.py  models.py  urls.py  views.py
apps/projects_and_plots/migrations/: 0001_initial.py  0002_alter_plot_status.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
scripts/: verify_bookings_workflow.py
templates/: base.html
templates/dashboard/: index.html
templates/partials/: sidebar.html
templates/registration/: login.html
